--- a/GitHubActionsTut.ipynb
+++ b/GitHubActionsTut.ipynb
@@ -7,7 +7,7 @@
     "## Creating CI/CD Pipeline for Python Project using\n",
     "# GitHub Actions\n",
     "\n",
-    "<img src=https://editor.analyticsvidhya.com/uploads/15307github%20actions.jpg>\n",
+    "<img src=https://editor.analyticsvidhya.com/uploads/63754cicd-tools.jpg>\n",
     "\n",
     ">*Actions are individual tasks that you can combine to create jobs and customize your workflow. You can create your own actions, and use and customize actions shared by the GitHub community.*\n",
     "\n",
