--- a/GitHubActionsTut.ipynb
+++ b/GitHubActionsTut.ipynb
@@ -20,16 +20,11 @@
    "source": [
     "## About Continuous Integration\n",
     "\n",
-    "Continuous integration (CI) is a software practice that requires frequently committing code to a shared repository. \n",
-    "\n",
-    "When you commit code to your repository, you can continuously build and test the code to make sure that the commit doesn't introduce errors. Your tests can include code linters (which check style formatting), security checks, code coverage, functional tests, and other custom checks.\n",
-    "\n",
-    "Building and testing your code requires a server. You can build and test updates locally before pushing code to a repository, or you can use a CI server that checks for new code commits in a repository.\n",
-    "\n",
-    "----\n",
-    "\n",
-    "GitHub offers CI workflow templates for a variety of languages and frameworks.\n",
-    "\n",
+    "CI/CD refers to the process in which your development team involves frequent code changes pushed in the main branch while ensuring that it does not impact any changes made by developers working parallelly. It provides smooth and convenient management.
+
+We will be doing CI/CD with the help of GitHub actions. GitHub Actions make it easy to automate all your software workflows now with the help of CI/CD. Build, test, and deploy your code right from GitHub. It uses YAML syntax to define the events, jobs, and steps. These files are stored in GitHub workflows, and a series of commands are automatically triggered whenever a code is pushed.
+
+",
     "-----\n"
    ]
   },
